--- a/Frontend/src/app/modules/example-page/example-page.component.scss
+++ b/Frontend/src/app/modules/example-page/example-page.component.scss
@@ -1,4 +1,10 @@
-
+header {
+  background-color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 3rem;
+}
 
 .welcome-container {
   text-align: justify;
