--- a/Frontend/src/styles.scss
+++ b/Frontend/src/styles.scss
@@ -1,4 +1,8 @@
 @import "assets/styles/theme";
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
+
 
 html, body { height: 100%; }
 body { margin: 0; font-family: Inter, "Helvetica Neue", sans-serif; }
