frontend finalizado parcialmente

--- a/Frontend/src/app/shared/header/header.component.html
+++ b/Frontend/src/app/shared/header/header.component.html
@@ -1,1 +1,8 @@
-<p>header works!</p>
+<header class="mat-elevation-z1">
+    <img alt="Logo de ATOM Chat" src="assets/images/logo-atom-chat.png" width="192.5" height="55" />
+    <button mat-icon-button (click)="logout()" class="logout-button" matTooltip="Cerrar sesión">
+        <mat-icon >logout</mat-icon>
+    </button>
+
+    
+</header>
