--- a/Frontend/src/app/pages/home/home.component.html
+++ b/Frontend/src/app/pages/home/home.component.html
@@ -1,1 +1,67 @@
-<p>home works!</p>
+<app-header></app-header>
+<div class="task-list-container">
+  <header class="header">
+      <h1 class="title">Tareas</h1>
+      <div class="filters">
+        <button mat-raised-button color="primary" class="oval-button" (click)="filterTasks('all')">Todas</button>
+        <button mat-raised-button color="accent" class="oval-button" (click)="filterTasks('pending')">Pendientes</button>
+        <button mat-raised-button color="warn" class="oval-button" (click)="filterTasks('completed')">Completadas</button>
+      </div>
+    </header>
+  
+    <main class="task-list">
+      <mat-card *ngFor="let task of filteredTasks" [ngClass]="{'completed': task.completed}" class="task-item">
+        <div class="task-details" >
+          
+          <ng-container *ngIf="!task.isEditing">
+            <div class="task-header">
+              <mat-checkbox [(ngModel)]="task.completed"></mat-checkbox>
+              <h3 matLine class="task-title">{{ task.title }}</h3>
+            </div>
+            <p matLine class="task-description">{{ task.description }}</p>
+            <small class="task-date"> {{ task.creationDate | date:'medium' }}</small>
+          </ng-container>
+          <ng-container *ngIf="task.isEditing">
+            <div  class="form-row">
+              <mat-form-field appearance="outline" class="form-field rounded-input">
+                <input matInput [(ngModel)]="task.title" placeholder="Tarea" required/>
+              </mat-form-field>
+              <mat-form-field appearance="outline" class="form-field rounded-input">
+                <input matInput [(ngModel)]="task.description" placeholder="Descripción">
+              </mat-form-field>
+              <button mat-icon-button class="save-button" color="primary" (click)="editTask(task)" (click)="saveTask(task, task.title, task.description)" [disabled]="!task.title">
+                <mat-icon>check_circle</mat-icon>
+              </button>
+             </div>
+          </ng-container>
+        </div>
+        <div class="task-actions" [ngClass]="{'hidden': task.isEditing}">
+          <button mat-icon-button color="primary" class="oval-button" (click)="editTask(task)">
+            <mat-icon>edit</mat-icon>
+          </button>
+          <button mat-icon-button color="primary" class="oval-button" (click)="deleteTask(task)">
+            <mat-icon>delete</mat-icon>
+          </button>
+        </div>
+      </mat-card>
+    </main>
+  
+    <footer class="footer">
+    <button mat-button color="accent" class="add-task-button" (click)="toggleAddTask()">Añadir una Tarea</button>
+      <ng-container *ngIf="showAddTask">
+        <mat-card class="add-task">
+          <div class="form-row col-4">
+            <mat-form-field appearance="outline" class="form-field rounded-input">
+              <input matInput [(ngModel)]="newTaskTitle" placeholder="Título" required />
+            </mat-form-field>
+            <mat-form-field appearance="outline" class="form-field rounded-input">
+              <input matInput [(ngModel)]="newTaskDescription" placeholder="Detalles" />
+            </mat-form-field>
+              <button mat-raised-button color="primary" class="oval-button add-button" (click)="addTask()"  [disabled]="!newTaskTitle" >Guardar</button>
+            
+          </div>
+        </mat-card>
+      </ng-container>
+      
+    </footer>
+  </div>
