--- a/Frontend/src/app/pages/login/login.component.html
+++ b/Frontend/src/app/pages/login/login.component.html
@@ -1,1 +1,31 @@
-<p>login works!</p>
+
+<div class="login-container">
+  <div class="imagen-class">
+    <img alt="Logo de ATOM Chat" src="assets\images\logo-atom-chat.png" width="192.5" height="55"  />
+  </div>  
+    <mat-card class="login-card">
+      <h2 class="login-title">Login</h2>
+      <div class="login-form">
+        <mat-form-field class="rounded-input" appearance="outline">
+          <mat-label>Correo Electrónico</mat-label>
+          <input matInput type="email" />
+        </mat-form-field>
+        <button mat-raised-button color="primary" class="oval-button login-button">Login</button>
+      </div>
+    </mat-card>
+    <div class="social-login-buttons">
+      <button mat-raised-button class="google-login-button">
+        <img
+          src="https://img.icons8.com/?size=512&id=17949&format=png"
+          alt="Google Logo" class="icon" />
+        Login with Google
+      </button>
+
+        <button mat-raised-button  class="facebook-login-button">
+          <mat-icon class="icon">facebook</mat-icon>
+          Login with Facebook
+        </button>
+      </div>
+  </div>
+
+  
