--- a/Frontend/src/app/pages/login/login.component.html
+++ b/Frontend/src/app/pages/login/login.component.html
@@ -8,24 +8,29 @@
       <div class="login-form">
         <mat-form-field class="rounded-input" appearance="outline">
           <mat-label>Correo Electrónico</mat-label>
-          <input matInput type="email" />
+          <input matInput type="email" [(ngModel)] = "email"/>
         </mat-form-field>
-        <button mat-raised-button color="primary" class="oval-button login-button">Login</button>
+        <button mat-raised-button color="primary" class="oval-button login-button" (click)="loginUser()">Login</button>
+        <p *ngIf="response" class="error">{{ response }}</p>
       </div>
+      <button mat-button (click)="openRegisterModal()">Registrarse</button>
+
     </mat-card>
     <div class="social-login-buttons">
-      <button mat-raised-button class="google-login-button">
+      <button mat-raised-button class="google-login-button" (click)="loginWithGoogle()">
         <img
           src="https://img.icons8.com/?size=512&id=17949&format=png"
           alt="Google Logo" class="icon" />
         Login with Google
       </button>
-
-        <button mat-raised-button  class="facebook-login-button">
-          <mat-icon class="icon">facebook</mat-icon>
-          Login with Facebook
-        </button>
+    <!--
+      <button mat-raised-button  class="facebook-login-button" (click)="loginWithFacebook()">
+       <mat-icon class="icon">facebook</mat-icon>
+         Login with Facebook
+       </button>
       </div>
+      
+    -->
   </div>
 
   
