--- a/Frontend/src/app/pages/home/home.component.html
+++ b/Frontend/src/app/pages/home/home.component.html
@@ -15,7 +15,7 @@
           
           <ng-container *ngIf="!task.isEditing">
             <div class="task-header">
-              <mat-checkbox [(ngModel)]="task.completed"></mat-checkbox>
+              <mat-checkbox [(ngModel)]="task.completed" (click)="updateTask(task.id!, { completed: task.completed })"></mat-checkbox>
               <h3 matLine class="task-title">{{ task.title }}</h3>
             </div>
             <p matLine class="task-description">{{ task.description }}</p>
@@ -29,7 +29,7 @@
               <mat-form-field appearance="outline" class="form-field rounded-input">
                 <input matInput [(ngModel)]="task.description" placeholder="Descripción">
               </mat-form-field>
-              <button mat-icon-button class="save-button" color="primary" (click)="editTask(task)" (click)="saveTask(task, task.title, task.description)" [disabled]="!task.title">
+              <button mat-icon-button class="save-button" color="primary" (click)="updateTask(task.id!, { title: task.title, description: task.description})" [disabled]="!task.title">
                 <mat-icon>check_circle</mat-icon>
               </button>
              </div>
@@ -39,7 +39,7 @@
           <button mat-icon-button color="primary" class="oval-button" (click)="editTask(task)">
             <mat-icon>edit</mat-icon>
           </button>
-          <button mat-icon-button color="primary" class="oval-button" (click)="deleteTask(task)">
+          <button mat-icon-button color="primary" class="oval-button" (click)="deleteTask(task.id!)">
             <mat-icon>delete</mat-icon>
           </button>
         </div>
